--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -159,11 +159,19 @@ ol#post-list {
   >*/
 div.summary {
     display: flex;
+    -webkit-flex-wrap: wrap;
     flex-wrap: wrap;
     align-items: center;
     border-bottom: 1px solid $aux-border-color;
     margin-top: 1.5rem;
+}
+@media screen and (max-width: 768px) and (orientation: landscape) {
+  /* Fix the weird wrapping (safari flex bug) on safari */
+  div.summary {
+    -webkit-flex-wrap: nowrap;
+    flex-wrap: nowrap;
   }
+}
 /*}*/
 
 p.paginator {
@@ -216,6 +224,11 @@ footer > address.body {
 
 table,td {
   border:1px none black;
+}
+
+.feature-image {
+  /* Fix the weird wrapping (safari flex bug) on safari */
+  margin: 0 -1px;
 }
 
 .feature-image>p>img {
